--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "glassbil",
-  "version": "0.0.7",
+  "version": "0.0.8",
+  "license": "MIT",
   "main": "dist/main.js",
   "scripts": {
     "start": "rollup -c rollup.config.js",
-    "test": "rollup -c rollup.config.js -i test/index.js -o test/result.js && mocha test/result.js; rm test/result.js"
+    "test": "rollup -c rollup.config.js -i test/index.js -o test/result.js && mocha test/result.js; rm test/result.js",
+    "client": "rollup -c rollup.config.js -i test/client.js -o test/bundle.js"
   },
   "dependencies": {
     "chai": "^4.1.2",
