--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "glassbil",
   "version": "0.0.8",
   "license": "MIT",
+  "module": "src/store.js",
   "main": "dist/main.js",
   "scripts": {
     "start": "rollup -c rollup.config.js",
     "test": "rollup -c rollup.config.js -i test/index.js -o test/result.js && mocha test/result.js; rm test/result.js",
     "client": "rollup -c rollup.config.js -i test/client.js -o test/bundle.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andcake/glassbil.git"
+  },
+  "homepage": "https://github.com/andcake/glassbil#readme",
   "dependencies": {
     "chai": "^4.1.2",
     "istanbul": "^0.4.5",
