--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "rollup -c rollup.config.js",
     "test": "rollup -c rollup.config.js -i test/index.js -o test/result.js && mocha test/result.js; rm test/result.js",
-    "client": "rollup -c rollup.config.js -i test/client.js -o test/bundle.js"
+    "client": "rollup -c rollup.config.js -i test/client.js -o test/bundle.js",
+    "worker": "rollup -c rollup.config.js -f iife -i test/workerstore.js -o test/worker-bundle.js && rollup -c rollup.config.js -i test/workeruser.js -o test/bundle.js"
   },
   "repository": {
     "type": "git",
